; ModuleID = '/home/carl/AnghaBench/i3/src/extr_load_layout.c_json_bool.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_load_layout.c_json_bool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"bool %d for key %s\0A\00", align 1
@last_key = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"focused\00", align 1
@json_node = common dso_local global %struct.TYPE_4__* null, align 8
@to_focus = common dso_local global %struct.TYPE_4__* null, align 8
@.str.2 = private unnamed_addr constant [7 x i8] c"sticky\00", align 1
@parsing_swallows = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [13 x i8] c"restart_mode\00", align 1
@current_swallow = common dso_local global %struct.TYPE_5__* null, align 8
@swallow_is_empty = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @json_bool to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @json_bool(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @last_key, align 4
  %7 = call i32 @LOG(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %5, i32 %6)
  %8 = load i32, i32* @last_key, align 4
  %9 = call i64 @strcasecmp(i32 %8, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** @json_node, align 8
  store %struct.TYPE_4__* %15, %struct.TYPE_4__** @to_focus, align 8
  br label %16

16:                                               ; preds = %14, %11, %2
  %17 = load i32, i32* @last_key, align 4
  %18 = call i64 @strcasecmp(i32 %17, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %16
  %21 = load i32, i32* %4, align 4
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** @json_node, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  br label %24

24:                                               ; preds = %20, %16
  %25 = load i64, i64* @parsing_swallows, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %36

27:                                               ; preds = %24
  %28 = load i32, i32* @last_key, align 4
  %29 = call i64 @strcasecmp(i32 %28, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0))
  %30 = icmp eq i64 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %27
  %32 = load i32, i32* %4, align 4
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** @current_swallow, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 4
  store i32 0, i32* @swallow_is_empty, align 4
  br label %35

35:                                               ; preds = %31, %27
  br label %36

36:                                               ; preds = %35, %24
  ret i32 1
}

declare dso_local i32 @LOG(i8*, i32, i32) #1

declare dso_local i64 @strcasecmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
